Change default asprof location

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "classPath": "/mnt/f/Projects/lancaster/StandaloneSampler/target/classes",
   "mainClass": "com.juoska.benchmark.CryptoBench",
-  "profilerPath": "/home/hellstone/tmp/async-profiler/build/lib/libasyncProfiler.so",
+  "profilerPath": "./executables/linux/lib/libasyncProfiler.so",
   "outputPath": "/home/hellstone/output.sampler.json",
-  "profilerRawOutputPath": "/home/hellstone/asprof.sjsw.output.raw.txt"
+  "profilerRawOutputPath": "/home/hellstone/asprof.sjsw.output.raw.json"
 }
