--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
             <version>2.17.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.9.2</version>
+            <scope>test</scope>
+        </dependency>
+
         <!--        Peass dependencies-->
         <dependency>
             <groupId>de.dagere.peass</groupId>
