--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.5.1</version>
+                    <configuration>
+                        <excludes>
+                            **/TestBenchmark.java
+                        </excludes>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
