--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,28 @@
     </dependencies>
 
     <build>
+        <plugins>
+           <plugin>
+             <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-shade-plugin</artifactId>
+              <version>3.6.0</version>
+              <executions>
+                 <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>shade</goal>
+                    </goals>
+                    <configuration>
+                        <transformers>
+                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <mainClass>com.juoska.StandaloneSampler</mainClass>
+                            </transformer>
+                        </transformers>
+                    </configuration>
+                </execution>
+              </executions>
+           </plugin>
+        </plugins>
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -66,19 +88,7 @@
                         </excludes>
                     </configuration>
                 </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.2.0</version>
-                    <configuration>
-                        <archive>
-                            <manifest>
-                                <addClasspath>true</addClasspath>
-                                <mainClass>com.juoska.StandaloneSampler</mainClass>
-                            </manifest>
-                        </archive>
-                    </configuration>
-                </plugin>
+                
             </plugins>
         </pluginManagement>
         <resources>
