--- a/pom.xml
+++ b/pom.xml
@@ -104,4 +104,12 @@
         </repository>
     </repositories>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/terahidro2003/sjsw</url>
+        </repository>
+    </distributionManagement>
+
 </project>
