--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,9 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
+          cache: maven
+      - name: Configure perf
+        run: sudo sysctl kernel.perf_event_paranoid=1
       - name: Publish package to Github
         run: mvn --batch-mode deploy
         env:
