--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,18 +14,15 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-          server-id: ossrh
+          server-id: central
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
 
       - name: Configure perf
         run: sudo sysctl kernel.perf_event_paranoid=1
 
-      - name: Build with Maven
-        run: mvn -B verify --file pom.xml
-
       - name: Publish package
-        run: mvn --batch-mode deploy
+        run: mvn deploy
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
