--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.terahidro2003</groupId>
-    <artifactId>sfsw</artifactId>
-    <version>0.2.0</version>
+    <artifactId>sjsw</artifactId>
+    <version>0.1.0</version>
 
     <packaging>jar</packaging>
 
