--- a/src/test/resources/TestBenchmark/pom.xml
+++ b/src/test/resources/TestBenchmark/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>commons-io</artifactId>
             <version>2.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.11.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
