--- a/src/test/resources/TestBenchmark/pom.xml
+++ b/src/test/resources/TestBenchmark/pom.xml
@@ -56,7 +56,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>io.github.terahidro2003.TestBenchmark</mainClass>
+                                    <mainClass>io.github.terahidro2003.benchmark.TestBenchmark</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
