Restructure tree DS

--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,12 @@
             <artifactId>measurement</artifactId>
             <version>0.4.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.openjdk.jmc</groupId>
+            <artifactId>flightrecorder</artifactId>
+            <version>9.0.0</version>
+        </dependency>
     </dependencies>
 
 
